# waft

./: .gitattributes  .gitignore  AI_NARRATIVE_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  DATA_TRACING_SUMMARY.md  Gamification-Research.md  LICENSE  PR_DESCRIPTION.md  PR_SUMMARY.md  README.md  REFACTORING_PLAN.md  RELEASE_NOTES.md  REVIEWER_GUIDE.md  SPEC-TAVERNKEEPER.md  SVELTEKIT_DEVELOPMENT_PROMPT.md  VERIFICATION_REPORT.md  WAFT_SYSTEM_INTEGRATION.md  big_bad_wolf.py  bump_version.py  create_release.py  create_release_simple.py  demo.py  demo_claude.py  generate_documentation_pdfs.py  play_gym.py  push_to_github.sh  pyproject.toml  run_demo.py  setup_git.py  setup_github.sh  test_api_server.py  test_server.py  test_tracing.py  verify_engine.py
.cursor/: BRANCH_STRATEGY_SETUP.md  BRIDGE_PROMPT.md  CLAUDE_CODE_CONTEXT.md  CONTINUATION_PROMPT.md  MIGRATION_CONTEXT.md  RECAP_AND_REVIEW.md  REPO_PURPOSE.md
.empirica/: config.yaml
.github/: JOURNAL.md  PULL_REQUEST_TEMPLATE.md
.obsidian/: workspace.json
Obsidian_Archive/: 00_Index.md
_fracture/: GENESIS_MARKER.md
_hidden/: .gitignore
_work_efforts/: AI_ORIENTATION_RECAP.md  ASSUMPTIONS_AND_TESTS.md  AUDIT_2026-01-09_002535.md  AUDIT_2026-01-09_010211.md  AUDIT_2026-01-09_013855.md  AUDIT_2026-01-09_015800.md  AUDIT_2026-01-09_COMPREHENSIVE.md  CHECKPOINT_2026-01-04_EMPIRICA.md  CHECKPOINT_2026-01-05_EMPIRICA_CLI_GAMIFICATION.md  CHECKPOINT_2026-01-07_BRANCH_STRATEGY.md  CHECKPOINT_2026-01-07_analytics_and_checkout_system.md  CHECKPOINT_2026-01-07_cursor_commands_creation.md  CHECKPOINT_2026-01-08_DECISION_ENGINE_COMPLETE.md  CHECKPOINT_2026-01-08_ONBOARDING_AND_ANALYSIS.md  CHECKPOINT_2026-01-08_SCINT_SYSTEM_FOUNDATION.md  CHECKPOINT_2026-01-09_CODEBASE_AUDIT_AND_VISION_ALIGNMENT.md  CHECKPOINT_2026-01-09_THEFOUNDATION.md  COMPLETE_CONVERSATION_HISTORY.md  CONSIDER_2026-01-09_010400.md  CONSIDER_2026-01-09_013900.md  CONSIDER_2026-01-09_015800.md  CONSIDER_2026-01-09_1258.md  CRITTER_TAXONOMY_GUIDE.md  CURRENT_STATE_AND_DIRECTION.md  CURRENT_STATE_ASSESSMENT_2026-01-06.md  DATABASE_SYSTEM.md  DATA_SHAPE.md  DATA_SHAPE_VISUAL.md  DATA_STORAGE.md  DATA_STORAGE_SUMMARY.md  DATA_TRAVERSAL.md  DECIDE_2026-01-09_010500.md  DEMO_OUTPUT_PREVIEW.md  DEVELOPMENT_WORKFLOW.md  DOCUMENTATION_REVIEW.md  EMPIRICA_ENHANCED_INTEGRATION.md  EMPIRICA_INTEGRATION.md  EXPANSION_SUMMARY.md  EXPERIMENTAL_FINDINGS.md  FINAL_RECAP_2026-01-07.md  (+31 more)
docs/: AI_SDK_VISION.md  BRANCH_STRATEGY.md  DECISION_ENGINE_ARCHITECTURE.md  DECISION_ENGINE_FLOW.md  DECISION_ENGINE_MASTER.md  DECISION_ENGINE_MERMAID.md  DECISION_ENGINE_PHASE3.md  FOUNDATION_STATUS.md  FOUNDATION_V2_GUIDE.md  FOUNDATION_V3_ROADMAP.md  OPEN_ISSUES.md  PDF_LIBRARY_COMPARISON.md  REFACTORING_CHANGELOG.md  SYSTEM_OVERVIEW.md
experiments/: reportlab_poc.py
frontend/: api_client.ts  useDecisionEngine.ts
saved_decisions/: test_strategy.json
scripts/: check-editable.sh  dev-reinstall.sh  generate_documentation_pdfs.py  generate_foundation_demo.py  json_merge_driver.py  promote-dev-to-staging.sh  promote-staging-to-main.sh  session-recap.py  sync-cursor-commands.sh
tests/: __init__.py  conftest.py  test_api.py  test_commands.py  test_core.py  test_cors.py  test_epistemic_display.py  test_foundation.py  test_gamification.py  test_memory.py  test_persistence.py  test_scint_mechanics.py  test_substrate.py  test_tavern_keeper.py  test_transformer.py
tools/: obsidian-linter-pyrite
visualizer/: .gitignore  README.md  package.json  svelte.config.js  tailwind.config.js  (+2 more)
(+488 files in other folders)
