[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waft"
version = "0.1.0"
description = "Waft - Ambient, self-modifying Meta-Framework for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Waft Team"}
]
keywords = ["meta-framework", "project-scaffolding", "uv", "python", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "empirica>=1.2.3",
    "tinydb>=4.8.0",
    "d20>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "watchdog>=3.0.0",
]
crewai = [
    "crewai>=0.1.0",
]
tavern-keeper = [
    "tracery>=0.1.1",
]

[project.scripts]
waft = "waft.main:main"

[project.urls]
Homepage = "https://github.com/ctavolazzi/waft"
Repository = "https://github.com/ctavolazzi/waft"
Issues = "https://github.com/ctavolazzi/waft/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["waft", "waft.core", "waft.cli", "waft.templates", "waft.ui", "waft.api"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv.workspace]
members = ["_experiments/test_project_001", "_experiments/existing_project", "_experiments/test_project_002", "_experiments/test_project_001/nested_project"]